; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_fdevname.c_fdevname_r.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_fdevname.c_fdevname_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fiodgname_arg = type { i8*, i32 }

@FIODGNAME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @fdevname_r(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.fiodgname_arg, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = getelementptr inbounds %struct.fiodgname_arg, %struct.fiodgname_arg* %8, i32 0, i32 0
  store i8* %9, i8** %10, align 8
  %11 = load i32, i32* %7, align 4
  %12 = getelementptr inbounds %struct.fiodgname_arg, %struct.fiodgname_arg* %8, i32 0, i32 1
  store i32 %11, i32* %12, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @FIODGNAME, align 4
  %15 = call i32 @_ioctl(i32 %13, i32 %14, %struct.fiodgname_arg* %8)
  %16 = icmp eq i32 %15, -1
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %20

18:                                               ; preds = %3
  %19 = load i8*, i8** %6, align 8
  store i8* %19, i8** %4, align 8
  br label %20

20:                                               ; preds = %18, %17
  %21 = load i8*, i8** %4, align 8
  ret i8* %21
}

declare dso_local i32 @_ioctl(i32, i32, %struct.fiodgname_arg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
